# LopetteRobot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
Rapport/: rapport.aux  rapport.tex
client/: Client.cpp
doc/: PROTOCOLE
report/: binding_avr.tex  communication.tex  conclusion.tex  implementation.tex  makefile  report.out  report.tex  structure.tex
src/: common.h  main.c  queue.c  queue.h
src/BindingAVR/: BindingAVR.c  BindingAVR.h
src/Commande/: .#Commande.h  Commande.c  Commande.h
src/Parse/: Parse.c  Parse.h
